2005-07-11  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/framework-*.scm: use port arguments throughout.

	* lily/include/lily-guile.hh: rename ly_c_X_p -> ly_is_X

	* lily/paper-outputter.cc (Paper_outputter): take port argument.

	* lily/paper-outputter-scheme.cc (LY_DEFINE): take port argument.

	* scm/framework-texstr.scm (output-framework): 

	* input/regression/repeat-fold.ly (texidoc): remove TeX strings.

	* scm/output-lib.scm (tablature-stem-attachment-function):
	tablature stem attachment fix. 

2005-07-10  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/bezier.cc: hardcode binomial coefficients of order 3.

	* lily/include/music-wrapper.hh: remove Music_wrapper as Music subtype.

	* scm/define-music-types.scm (music-descriptions): don't use
	Music_wrapper type.

	* lily/paper-column.cc (print): print moment too.

	* scripts/mup2ly.py (cp_to_dir): remove 1.5.2 compat glue.  
	remove compatibility cruft.

	* lily/parser.yy (score_body): \score can only begin with Music. 

	* lily/score-scheme.cc (LY_DEFINE): rename scorify to
	make-score. Take music argument only. Move parser interaction to
	Scheme.

	* scm/lily-library.scm (scorify-music): new function.

	* python/lilylib.py (datadir): remove 2.1 compat kludge.
	(datadir): remove resource import.
	(print_environment): remove get_bbox()
	(cp_to_dir): remove pre 1.5.2 compat glue.

2005-07-09  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/include/simple-spacer.hh (Module): idem.

	* lily/include/spring.hh (struct Spring): store inverse
	strength. This prevents division by zero.

	* VERSION: release 2.7.0
	
	* lily/include/music.hh (class Music): remove Music::duration_log()

	* lily/stem-engraver.cc (make_stem): take duration log from event.

	* lily/chord-tremolo-engraver.cc: don't ack note-head-interface.

2005-07-08  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/lily.scm (ly:load): load autochange.scm

	* Documentation/user/tutorial.itely (Running LilyPond for the
	first time): remove reference to DVI/TeX
