@@ -7,8 +7,10 @@
 */
 
 #include "book.hh"
+
 #include "output-def.hh"
 #include "score.hh"
+#include "paper-book.hh"
 #include "ly-module.hh"
 
 LY_DEFINE (ly_make_book, "ly:make-book",
@@ -23,7 +25,7 @@ LY_DEFINE (ly_make_book, "ly:make-book",
   Book *book = new Book;
   book->paper_ = odef;
 
-  if (ly_c_module_p (header))
+  if (ly_is_module (header))
     book->header_ = header;
 
   book->scores_ = scm_append (scm_list_2 (scores, book->scores_));
@@ -32,3 +34,34 @@ LY_DEFINE (ly_make_book, "ly:make-book",
   scm_gc_unprotect_object (x);
   return x;
 }
+
+LY_DEFINE (ly_parser_print_book, "ly:book-process",
+	   3, 0, 0, (SCM book_smob,
+		     SCM default_paper,
+		     SCM default_layout,
+		     SCM basename),
+	   "Print book.")
+{
+  Book *book = unsmob_book (book_smob);
+
+  SCM_ASSERT_TYPE (book, book_smob, SCM_ARG1, __FUNCTION__, "Book");
+  SCM_ASSERT_TYPE (unsmob_output_def (default_paper),
+		   default_layout, SCM_ARG2, __FUNCTION__, "\\paper block");
+  SCM_ASSERT_TYPE (unsmob_output_def (default_layout),
+		   default_layout, SCM_ARG3, __FUNCTION__, "\\layout block");
+  SCM_ASSERT_TYPE (scm_is_string (basename), basename, SCM_ARG4, __FUNCTION__, "string");
+
+  String base = ly_scm2string (basename);
+  Paper_book *pb = book->process (base,
+				  unsmob_output_def (default_paper),
+				  unsmob_output_def (default_layout)
+				  );
+  if (pb)
+    {
+      pb->output (base);
+      scm_gc_unprotect_object (pb->self_scm ());
+    }
+
+  return SCM_UNSPECIFIED;
+}
+
