@@ -27,7 +27,9 @@ public:
 
   Book ();
   void add_score (SCM);
-  Paper_book *process (String, Output_def *);
+  Paper_book *process (String,
+		       Output_def *def_paper,
+		       Output_def *def_layout);
   void set_keys ();
 };
 
