@@ -2504,12 +2504,18 @@ conversions.append (((2, 6, 0), conv,
 		     'dummy rule for 2.6')) 
 
 
+
 def conv (str):
 	return re.sub('ly:get-default-font', 'ly:grob-default-font', str) 
 
 conversions.append (((2, 7, 0), conv,
-		     
-		     'ly:get-default-font -> ly:grob-default-font')) 
+		     'ly:get-default-font -> ly:grob-default-font'))
+
+def conv (str):
+	return re.sub('ly:parser-define', 'ly:parser-define!', str)
+
+conversions.append (((2, 7, 0), conv,
+		     'ly:parser-define -> ly:parser-define!'))
 
 ################################################################
 
