@@ -551,9 +551,9 @@ output = {
 PREAMBLE_LY = r'''%%%% Generated by %(program_name)s
 %%%% Options: [%(option_string)s]
 
-#(set! toplevel-score-handler ly:parser-print-score)
+#(set! toplevel-score-handler print-score-with-defaults)
 #(set! toplevel-music-handler (lambda (p m)
-			       (ly:parser-print-score
+			       (print-score-with-defaults
 				p (scorify-music m p))))
 
 #(ly:set-option (quote no-point-and-click))
